--- a/src/app/status/status.component.scss
+++ b/src/app/status/status.component.scss
@@ -1,17 +1,21 @@
 .status {
-  margin: 5px;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
+  margin: 5px 0;
+  padding: 2px 10px;
+  line-height: 16px;
+  font-size: 9px;
+  min-height: 16px;
+  border-radius: 6px;
   display: inline-block;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  transition: background 0.3s ease, transform 0.3s ease;
+  box-shadow: 0 0 5px #0003;
+  text-transform: capitalize;
+  transition: background .3s ease, transform .3s ease;
 }
 
 .online {
   background: var(--app-green-2);
   box-shadow: 0 0 10px rgba(0, 255, 0, 0.7);
-  animation: pulse 1.5s infinite;
+  animation: pulse 1.5s ease-in;
+  color: var(--app-white);
 }
 
 .offline {
