refs   #6829,  Add Terms acceptance for Doctor

--- a/src/app/cgu/cgu.component.html
+++ b/src/app/cgu/cgu.component.html
@@ -1,39 +1,56 @@
+<app-top-nav
+        *ngIf="currentUser"
+        [title]="'dashboard.dashboard' | translate"
+        [icon]="'dashboard'"></app-top-nav>
+
 <div class="center">
-  <div class="custom-card">
-    <div class="container">
-      <div class="title" *ngIf="!error">
-        {{ 'cgu.selectCountry' | translate }}
-        <div class="country-select">
-          <div class="sl-container">
-            <select
-              class="lang"
-              #langSelect
-              (change)="changeCountry(langSelect.value)">
-              <option *ngFor="let country of countries" [value]="country">
-                {{ country }}
-              </option>
-            </select>
-          </div>
+    <div class="custom-card">
+        <div class="container">
+            <div class="title" *ngIf="!error">
+                {{ 'cgu.selectCountry' | translate }}
+                <div class="country-select">
+                    <div class="sl-container">
+                        <select
+                                class="lang"
+                                #langSelect
+                                (change)="changeCountry(langSelect.value)">
+                            <option *ngFor="let country of countries" [value]="country">
+                                {{ country }}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="back">
+                <button (click)="goBack()" class="secondary-button-outlined" mat-button>
+                    {{ 'cgu.backToHome' | translate }}
+                </button>
+            </div>
+
+            <h2>{{ 'cgu.termsAndConditions' | translate }}</h2>
+
+            <markdown
+                    [src]="error ? 'assets/terms.md' : 'assets/terms/' + selectedTermName">
+                <h2>{{ 'cgu.notConfigured' | translate }}</h2>
+            </markdown>
+
+
+            <ng-container *ngIf="showCheckbox">
+                <section>
+                    <mat-checkbox [(ngModel)]="checked">{{ 'cgu.pleaseAccept' | translate }}</mat-checkbox>
+                </section>
+                <div class="back">
+                    <button [disabled]="!checked" (click)="submit()" class="btn__send primary-button" mat-button>
+                        {{ 'cgu.submit' | translate }}
+                    </button>
+                </div>
+            </ng-container>
+
+            <div class="back">
+                <button (click)="goBack()" class="secondary-button-outlined" mat-button>
+                    {{ 'cgu.backToHome' | translate }}
+                </button>
+            </div>
         </div>
-      </div>
-      <div class="back">
-        <button (click)="goBack()" class="secondary-button-outlined" mat-button>
-          {{ 'cgu.backToHome' | translate }}
-        </button>
-      </div>
-
-      <h2>{{ 'cgu.termsAndConditions' | translate }}</h2>
-
-      <markdown
-        [src]="error ? 'assets/terms.md' : 'assets/terms/' + selectedTermName">
-        <h2>{{ 'cgu.notConfigured' | translate }}</h2>
-      </markdown>
-
-      <div class="back">
-        <button (click)="goBack()" class="secondary-button-outlined" mat-button>
-          {{ 'cgu.backToHome' | translate }}
-        </button>
-      </div>
     </div>
-  </div>
 </div>
