terms modal imporovements

--- a/src/app/cgu/cgu.component.html
+++ b/src/app/cgu/cgu.component.html
@@ -16,7 +16,7 @@
                     </div>
                 </div>
             </div>
-            <div class="back" *ngIf="!showCheckbox">
+            <div class="back">
                 <button (click)="goBack()" class="secondary-button-outlined" mat-button>
                     {{ 'cgu.backToHome' | translate }}
                 </button>
@@ -30,7 +30,7 @@
             </markdown>
 
 
-            <div class="back" *ngIf="!showCheckbox">
+            <div class="back">
                 <button (click)="goBack()" class="secondary-button-outlined" mat-button>
                     {{ 'cgu.backToHome' | translate }}
                 </button>
