refs ##6555, Enable some options in invite break the form

--- a/src/app/invite-form/invite-form.component.html
+++ b/src/app/invite-form/invite-form.component.html
@@ -291,6 +291,7 @@
             <mat-checkbox
               formControlName="inviteGuestFormControl"
               [(ngModel)]="inviteGuest"
+              (ngModelChange)="myForm.get('guestContactFormControl')?.updateValueAndValidity()"
               >{{ 'inviteForm.inviteLovedOneOrProfessional' | translate }}
             </mat-checkbox>
           </div>
