--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
     [consultation]="currentConsultation">
   </app-overlay>
   <div class="cards-container">
-    <mat-card class="card-left">
+    <mat-card appearance="outlined" class="card-left">
       <div class="desc">
         <h2>
           {{ 'dashboard.waitingRoom' | translate }}
@@ -77,7 +77,7 @@
         matBadgeColor="warn"></mat-icon>
     </mat-card>
 
-    <mat-card class="card-right">
+    <mat-card appearance="outlined" class="card-right">
       <div class="desc">
         <h2>{{ 'dashboard.openedConsultations' | translate }}</h2>
         <p>
