--- a/src/app/forgot-password/forgot-password.component.scss
+++ b/src/app/forgot-password/forgot-password.component.scss
@@ -31,19 +31,19 @@
   @media (max-width: 600px) {
     margin: 30px;
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   ::ng-deep .mat-focused .mat-form-field-label {
     color: white !important;
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   ::ng-deep.mat-form-field-underline {
     background-color: white !important;
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   ::ng-deep.mat-form-field-ripple {
     background-color: white !important;
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   ::ng-deep .mat-form-field-label {
     color: white !important;
   }
@@ -135,8 +135,8 @@ input:-webkit-autofill {
   align-items: center;
   justify-content: center;
 
-  &::ng-deep .mat-progress-spinner circle,
-  .mat-spinner circle {
+  &::ng-deep .mat-mdc-progress-spinner circle,
+  .mat-mdc-progress-spinner circle {
     stroke: white !important;
   }
 }
@@ -170,6 +170,7 @@ input:-webkit-autofill {
   display: flex;
   align-items: center;
   mat-form-field {
+    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
     ::ng-deep .mat-form-field-label {
       left: 0 !important;
     }
