--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -7,7 +7,7 @@
 
 
   <div>
-    <mat-card >
+    <mat-card appearance="outlined" >
       <div class="desc">
         <h2 style="    display: inline;"  >{{ 'support.incidentReportHome' | translate:configService.config }} </h2>
     </div>
