--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,7 +49,7 @@
 .menu-list {
 }
 
-.mat-list-base {
+.mat-mdc-list-base {
   padding-top: 0 !important;
 }
 
@@ -59,6 +59,7 @@
   height: 99px !important;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 mat-list-item,
 .menu-btn {
   padding-left: 4px;
@@ -75,11 +76,13 @@ mat-list-item,
   padding-top: 20px !important;
   height: 100%;
 }
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 mat-list-item:nth-child(2) .menu-btn {
   padding-left: 10px;
   padding-right: 10px;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 mat-list-item:nth-child(1) .menu-btn {
   padding-left: 10px;
   padding-right: 10px;
@@ -122,6 +125,7 @@ button.active {
   color: #ffffff;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 mat-list-item {
   margin-bottom: 8px;
 }
