--- a/src/app/profile-update/profile-update.component.scss
+++ b/src/app/profile-update/profile-update.component.scss
@@ -27,7 +27,7 @@
   // ::ng-deep .mat-form-field-infix {
   //   width: 180px !important;
   // }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   ::ng-deep .mat-form-field-label {
     left: 0 !important;
   }
@@ -45,7 +45,7 @@
   // ::ng-deep .mat-form-field-infix {
   //   width: 180px !important;
   // }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   ::ng-deep .mat-form-field-label {
     left: 0 !important;
   }
@@ -97,8 +97,8 @@ mat-form-field {
   width: 100%;
   height: 100%;
   
-  &::ng-deep .mat-progress-spinner circle,
-  .mat-spinner circle {
+  &::ng-deep .mat-mdc-progress-spinner circle,
+  .mat-mdc-progress-spinner circle {
     stroke: var(--primary-color) !important;
   }
 }
