--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -16,6 +16,7 @@ dd {
   width: 350px;
   mat-form-field.mat-form-field-disabled {
     margin-left: 10px;
+    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
     ::ng-deep .mat-form-field-label  {
       color: grey !important;
     }
@@ -23,7 +24,7 @@ dd {
   }
   mat-form-field {
     margin-left: 10px;
-
+    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
     ::ng-deep .mat-form-field-label {
       left: 0 !important;
       color: black !important;
