--- a/src/app/reset-password/reset-password.component.scss
+++ b/src/app/reset-password/reset-password.component.scss
@@ -30,22 +30,22 @@
 .container {
   width: 400px;
   margin: auto;
-
+  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   ::ng-deep .mat-focused .mat-form-field-label {
     /*change color of label*/
     color: white !important;
   }
-
+  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   ::ng-deep.mat-form-field-underline {
     /*change color of underline*/
     background-color: white !important;
   }
-
+  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   ::ng-deep.mat-form-field-ripple {
     /*change color of underline when focused*/
     background-color: white !important;
   }
-
+  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   ::ng-deep .mat-form-field-label {
     /*change color of label*/
     color: white !important;
@@ -141,8 +141,8 @@ input:-webkit-autofill {
   align-items: center;
   justify-content: center;
 
-  &::ng-deep .mat-progress-spinner circle,
-  .mat-spinner circle {
+  &::ng-deep .mat-mdc-progress-spinner circle,
+  .mat-mdc-progress-spinner circle {
     stroke: white !important;
   }
 }
@@ -177,6 +177,7 @@ input:-webkit-autofill {
   align-items: center;
 
   mat-form-field {
+    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
     ::ng-deep .mat-form-field-label {
       left: 0 !important;
     }
@@ -221,6 +222,7 @@ input:-webkit-autofill {
 
 .reset-password-form {
   ::ng-deep {
+    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
     .mat-form-field-label {
       left: 0 !important;
     }
