--- a/src/app/stream/peer-video-screen/peer-video-screen.component.scss
+++ b/src/app/stream/peer-video-screen/peer-video-screen.component.scss
@@ -55,15 +55,18 @@ video {
   z-index: -1;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
 ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-label {
   color: #ffffff !important;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
 ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-underline{
   background-color: #d6d6d6d7 !important;
 }
 
-::ng-deep .mat-form-field.mat-focused .mat-form-field-ripple{
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+::ng-deep .mat-mdc-form-field.mat-focused .mat-form-field-ripple{
   background-color: #f5f5f5c2 !important;
 }
 
