--- a/src/app/support/support.component.scss
+++ b/src/app/support/support.component.scss
@@ -11,6 +11,7 @@ span.tile-header{
 
 
 
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card{
   padding:30px;
   margin-left: 80px;
