--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
 
-html,
-body {
-  height: 100%;
-}
 
 @import "@angular/material/theming";
 @import "assets/fonts/fonts";
-// Plus imports for other components in your app.
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
+
 @include mat-core();
 $md-hug: (
         50: #e5eef7,
@@ -44,27 +36,28 @@ $md-hug: (
                 A700: #000000,
         ),
 );
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
 $app-primary: mat-palette($md-hug);
 $app-accent: mat-palette($mat-pink, A200, A100, A400);
 
-// The warn palette is optional (defaults to red).
 $app-warn: mat-palette($mat-red);
 
-// Create the theme object (a Sass map containing all of the palettes).
 $app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
 @include angular-material-theme($app-theme);
+
+
+html,
+body {
+  height: 100%;
+}
+
+
 body {
   margin: 0;
   font-family: 'Roboto', "Helvetica Neue", sans-serif;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version. */
 .mat-list-item-content {
   padding: 0px !important;
 }
@@ -80,6 +73,7 @@ body {
   background: #bd2828 !important;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
 .mat-form-field-label {
   display: flex;
   text-align: center;
@@ -161,7 +155,7 @@ img.logo {
   background-color: var(--primary-color);
 }
 
-.mat-progress-spinner circle, .mat-spinner circle {
+.mat-mdc-progress-spinner circle, .mat-mdc-progress-spinner circle {
   stroke: var(--primary-color)
 }
 
@@ -170,36 +164,44 @@ img.logo {
   flex-direction: column;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
 .mat-checkbox-ripple .mat-ripple-element {
   background-color: var(--primary-color) !important;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
 .mat-checkbox-checked.mat-accent .mat-checkbox-background {
   background-color: var(--primary-color) !important;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
 .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
   background-color: var(--primary-color) !important;
 }
 
-.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+/* TODO(mdc-migration): The following rule targets internal classes of slide-toggle that may no longer apply for the MDC version. */
+.mat-mdc-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
   background-color: var(--primary-color) !important;
 }
 
-.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+/* TODO(mdc-migration): The following rule targets internal classes of slide-toggle that may no longer apply for the MDC version. */
+.mat-mdc-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
   background-color: var(--primary-color) !important;
 }
 
-.mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+/* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version. */
+.mat-mdc-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
   border-color: var(--primary-color);
 }
 
-.mat-radio-button.mat-accent .mat-radio-inner-circle {
+/* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version. */
+.mat-mdc-radio-button.mat-accent .mat-radio-inner-circle {
   color: var(--primary-color);
   background-color: var(--primary-color);
 }
 
-.mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element {
+/* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version. */
+.mat-mdc-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element {
   background-color: var(--primary-color);
 }
 
@@ -222,7 +224,8 @@ img.logo {
 }
 
 
-.mat-button.mat-button-disabled.mat-button-disabled {
+/* TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version. */
+.mat-mdc-button.mat-button-disabled.mat-button-disabled {
   color: var(--app-white);
   opacity: 0.7;
 }
