--- a/src/app/invitations/invitations.component.scss
+++ b/src/app/invitations/invitations.component.scss
@@ -65,6 +65,7 @@ span.tile-header {
 }
 /* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 /* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card {
   ::ng-deep .mat-grid-tile .mat-figure {
     justify-content: start;
