--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,6 +61,7 @@
 
 /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 mat-list-item,
 .menu-btn {
   padding-left: 4px;
@@ -79,11 +80,13 @@ mat-list-item,
 }
 /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 mat-list-item:nth-child(2) .menu-btn {
   padding-left: 10px;
   padding-right: 10px;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 mat-list-item:nth-child(1) .menu-btn {
@@ -128,6 +131,7 @@ button.active {
   color: #ffffff;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 mat-list-item {
