--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -6,6 +6,7 @@ span.tile-header {
 
 /*TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
 /*TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
+/*TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
 mat-card {
   padding: 0;
 }
