--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -18,6 +18,7 @@ dd {
     margin-left: 10px;
     /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
     /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
     ::ng-deep .mat-form-field-label  {
       color: grey !important;
     }
@@ -25,6 +26,7 @@ dd {
   }
   mat-form-field {
     margin-left: 10px;
+    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
     /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
     /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
     ::ng-deep .mat-form-field-label {
