--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
       </div>
       <ng-template #defaultLogo>
         <div class="at">
-          @ <span>{{ 'login.home' | translate }}</span>
+          &#64; <span>{{ 'login.home' | translate }}</span>
         </div>
       </ng-template>
       <mat-list class="menu-list">
