--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,7 +1,7 @@
 <ng-container>
     <div class="wrap">
       <div class="container">
-        <div class="at">@ <span>{{ 'forgotPassword.home' | translate }}</span></div>
+        <div class="at">&#64; <span>{{ 'forgotPassword.home' | translate }}</span></div>
 
         <form
           (submit)="forgotPassword()"
