--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <ng-container>
   <div class="wrap">
     <div class="container">
-      <div class="at">@</div>
+      <div class="at">&#64;</div>
 
       <p class="saml-login" *ngIf="showSamlLogin">
         <a [href]="samlLoginUrl" class="redirect-btn" mat-button>
